Closed Bug 18256 Opened 26 years ago Closed 26 years ago

WLLT_OnSubmit leaks nsIDocument

Categories

(SeaMonkey :: UI Design, defect, P1)

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: waterson, Assigned: waterson)

References

()

Details

(Keywords: memory-leak)

Attachments

(1 file)

Status: NEW → ASSIGNED
Priority: P3 → P1
Target Milestone: M12
Attached patch proposed fixSplinter Review
No description provided.
morse: please review proposed fix. thanks, chris
Proposed fix looks fine to me. Approved. Thanks for catching this and for fixing it.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Keywords: mlk
QA Contact: don → sairuh
Summary: [mlk] WLLT_OnSubmit leaks nsIDocument → WLLT_OnSubmit leaks nsIDocument
rubberstamp vrfy.
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: