Bug 18256. Fix nsIDocument leak in WLLT_OnSubmit. r=morse, a=chofmann